--- a/src/components/Display/css/styles.css
+++ b/src/components/Display/css/styles.css
@@ -1,55 +1,55 @@
-/* index.css */ 
+/* index.css */
 .popup-content {
   margin: auto;
-  background: none; 
+  background: none;
   width: 30%;
   border: none;
 }
-.tictactoe-modal {
+.werewoft-modal {
   font-size: 12px;
 }
-.tictactoe-modal > .header {
+.werewoft-modal > .header {
   width: 100%;
   background: white;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.12);;
-  border-top-left-radius: .4375rem;
-  border-top-right-radius: .4375rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  border-top-left-radius: 0.4375rem;
+  border-top-right-radius: 0.4375rem;
   font-size: 18px;
   text-align: left;
   padding: 15px;
 }
-.tictactoe-modal > .content {
+.werewoft-modal > .content {
   width: 100%;
   padding: 30px 30px;
   background: white;
 }
-.tictactoe-modal > .footer {
+.werewoft-modal > .footer {
   width: 100%;
   padding: 25px 30px;
   text-align: right;
   justify-content: right;
   align-items: center;
   background: white;
-  border-top: 1px solid rgba(0, 0, 0, 0.12);;
-  border-bottom-left-radius: .4375rem;
-  border-bottom-right-radius: .4375rem;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  border-bottom-left-radius: 0.4375rem;
+  border-bottom-right-radius: 0.4375rem;
 }
-.tictactoe-modal > .actions {
+.werewoft-modal > .actions {
   margin: auto;
 }
-.tictactoe-modal > .actions {
+.werewoft-modal > .actions {
   width: 100%;
   padding: 10px 5px;
   text-align: center;
 }
-.tictactoe-modal > .close {
+.werewoft-modal > .close {
   cursor: pointer;
   position: absolute;
   display: block;
   padding: 2px 5px;
   line-height: 20px;
-  top: .95rem;
-  right: .95rem;
+  top: 0.95rem;
+  right: 0.95rem;
   font-size: 36px;
   background: #ffffff;
   color: #004c9e;
